if/c#/hpdf.cs


    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_CreateOutline(IntPtr pdf, IntPtr parent,
                    string title, IntPtr encoder);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_GetEncoder(IntPtr pdf,
                    string encoding_name);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_GetCurrentEncoder(IntPtr pdf);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetCurrentEncoder(IntPtr pdf,
                    string encoding_name);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_UseJPEncodings(IntPtr pdf);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_UseKREncodings(IntPtr pdf);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_UseCNSEncodings(IntPtr pdf);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_UseCNTEncodings(IntPtr pdf);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_LoadPngImageFromFile(IntPtr pdf,
                    string filename);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_LoadPngImageFromFile2(IntPtr pdf,
                    string filename);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_LoadJpegImageFromFile(IntPtr pdf,
                    string filename);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_LoadRawImageFromFile(IntPtr pdf,
                    string filename, uint width, uint height,
                    HPdfColorSpace color_space);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_LoadRawImageFromMem(IntPtr pdf,
                    byte[] data, int width, int height,
                    HPdfColorSpace color_space,
                    uint bits_per_component);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetInfoAttr(IntPtr pdf,
                    HPdfInfoType type, string value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetInfoDateAttr(IntPtr pdf,
                    HPdfInfoType type, HPdfDate value);

    [DllImport("libhpdf.dll")]
    private extern static string HPDF_GetInfoAttr(IntPtr pdf,
                    HPdfInfoType type);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetPassword(IntPtr pdf,
                    string owner_passwd, string user_passwd);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetPermission(IntPtr pdf,
                    uint permission);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetEncryptionMode(IntPtr pdf,
                    HPdfEncryptMode mode, uint key_len);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_SetCompressionMode(IntPtr pdf,
                    uint mode);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_CreateExtGState(IntPtr pdf);

    // handle to an instance of a HPdfDoc object.
    private IntPtr hpdf;

    public HPdfDoc() {
        HPDF_ErrorHandler error_handler =
                new HPDF_ErrorHandler(HPdfDoc.ErrorProc);
        hpdf = HPDF_New(error_handler, IntPtr.Zero);
        if (hpdf == IntPtr.Zero) {
            throw new Exception("cannot create HPdfDoc object.");
        }
    }

    void IDisposable.Dispose() {
        if (hpdf != IntPtr.Zero) {
            HPDF_Free(hpdf);
        }

        hpdf = IntPtr.Zero;
    }

    ~HPdfDoc() {
        if (hpdf != IntPtr.Zero) {
            HPDF_Free(hpdf);
        }
    }

    public static string HPdfGetVersion() {
        return HPDF_GetVersion();
    }

    public static void ErrorProc(uint error_no, uint detail_no,
            IntPtr user_data) {
        string s = "error-code=0x" + error_no.ToString("X") + " detail-code=" + detail_no;
        throw new Exception(s);
    }

    public void NewDoc() {
        HPDF_NewDoc(hpdf);
    }

    public void FreeDoc() {
        HPDF_FreeDoc(hpdf);
    }

    public void FreeDocAll() {
        HPDF_FreeDocAll(hpdf);
    }

    public bool HasDoc() {
        return (HPDF_HasDoc(hpdf) != 0);
    }

    public void SaveToFile(string file_name) {
        HPDF_SaveToFile(hpdf, file_name);
    }

    public uint GetError() {
        return HPDF_GetError(hpdf);
    }

    public uint GetErrorDetail() {
        return HPDF_GetErrorDetail(hpdf);
    }

    public void ResetError() {
        HPDF_ResetError(hpdf);
    }

    public void SetPagesConfiguration(uint page_per_pages) {
        HPDF_SetPagesConfiguration(hpdf, page_per_pages);
    }

    public HPdfPage GetPageByIndex(uint index) {
        IntPtr hpage;

        hpage = HPDF_GetPageByIndex(hpdf, index);
        return new HPdfPage(hpage);
    }

    public HPdfPageLayout GetPageLayout() {
        return HPDF_GetPageLayout(hpdf);
    }

    public void SetPageLayout(HPdfPageLayout layout) {
        HPDF_SetPageLayout(hpdf, layout);
    }

    public HPdfPageMode GetPageMode() {
        return HPDF_GetPageMode(hpdf);
    }

    public void SetPageMode(HPdfPageMode mode) {
        HPDF_SetPageMode(hpdf, mode);
    }

    public void SetOpenAction(HPdfDestination open_action) {
        if (open_action == null) {
            // ERROR!!
        } else {
            HPDF_SetOpenAction(hpdf, open_action.GetHandle());
        }
    }

    public uint GetViewerPreference() {
        return HPDF_GetViewerPreference(hpdf);
    }

    public void SetViewerPreference(uint value) {
        HPDF_SetViewerPreference(hpdf, value);
    }

    public HPdfPage GetCurrentPage() {
        IntPtr hpage;

        hpage = HPDF_GetCurrentPage(hpdf);
        return new HPdfPage(hpage);
    }

    public HPdfPage AddPage() {
        IntPtr hpage;

        hpage = HPDF_AddPage(hpdf);
        return new HPdfPage(hpage);
    }

    public HPdfPage InsertPage(HPdfPage page) {
        IntPtr hpage;

        hpage = HPDF_InsertPage(hpdf, page.GetHandle());
        return new HPdfPage(hpage);
    }

    public HPdfFont GetFont(string font_name, string encoding_name) {
        IntPtr hfont;

        hfont = HPDF_GetFont(hpdf, font_name, encoding_name);
        return new HPdfFont(hfont);
    }

    public string LoadType1FontFromFile(string afmfilename,
            string pfmfilename) {
        string font_name;

        font_name = HPDF_LoadType1FontFromFile(hpdf, afmfilename, pfmfilename);
        return font_name;
    }

    public string LoadTTFontFromFile(string file_name, bool embedding) {
        string font_name;
        int emb;

        if (embedding)
            emb = HPDF_TRUE;
        else
            emb = HPDF_FALSE;

        font_name = HPDF_LoadTTFontFromFile(hpdf, file_name, emb);
        return font_name;
    }

    public string LoadTTFontFromFile2(string file_name, uint index,
            bool embedding) {
        string font_name;
        int emb;

        if (embedding)
            emb = HPDF_TRUE;
        else
            emb = HPDF_FALSE;

        font_name = HPDF_LoadTTFontFromFile2(hpdf, file_name, index, emb);
        return font_name;
    }

    public void AddPageLabel(uint page_num, HPdfPageNumStyle style,
            uint first_page, string prefix) {
        HPDF_AddPageLabel(hpdf, page_num, style, first_page, prefix);
    }

    public uint UseJPFonts() {
        return HPDF_UseJPFonts(hpdf);
    }

    public uint UseKRFonts() {
        return HPDF_UseKRFonts(hpdf);
    }

    public uint UseCNSFonts() {
        return HPDF_UseCNSFonts(hpdf);
    }

    public uint UseCNTFonts() {
        return HPDF_UseCNTFonts(hpdf);
    }

    public HPdfOutline CreateOutline(HPdfOutline parent, string title,
            HPdfEncoder encoder) {
        IntPtr hparent;
        IntPtr hencoder;
        IntPtr houtline;

        if (encoder != null)
            hencoder = encoder.GetHandle();
        else
            hencoder = IntPtr.Zero;

        if (parent != null)
            hparent = parent.GetHandle();
        else
            hparent = IntPtr.Zero;

        houtline = HPDF_CreateOutline(hpdf, hparent, title, hencoder);
        return new HPdfOutline(houtline);
    }

    public HPdfEncoder GetEncoder(string encoding_name) {
        IntPtr hencoder;

        hencoder = HPDF_GetEncoder(hpdf, encoding_name);

        return new HPdfEncoder(hencoder);
    }

    public HPdfEncoder GetCurrentEncoder() {
        IntPtr hencoder;

        hencoder = HPDF_GetCurrentEncoder(hpdf);

        return new HPdfEncoder(hencoder);
    }

    public void SetCurrentEncoder(string encoding_name) {
        HPDF_SetCurrentEncoder(hpdf, encoding_name);
    }

    public uint UseJPEncodings() {
        return HPDF_UseJPEncodings(hpdf);
    }

    public uint UseKREncodings() {
        return HPDF_UseKREncodings(hpdf);
    }

    public uint UseCNSEncodings() {
        return HPDF_UseCNSEncodings(hpdf);
    }

    public uint UseCNTEncodings() {
        return HPDF_UseCNTEncodings(hpdf);
    }

    public HPdfImage LoadPngImageFromFile(string filename) {
        IntPtr hobj;

        hobj = HPDF_LoadPngImageFromFile(hpdf, filename);

        return new HPdfImage(hobj);
    }

    public HPdfImage LoadPngImageFromFile2(string filename) {
        IntPtr hobj;

        hobj = HPDF_LoadPngImageFromFile2(hpdf, filename);

        return new HPdfImage(hobj);
    }

    public HPdfImage LoadJpegImageFromFile(string filename) {
        IntPtr hobj;

        hobj = HPDF_LoadJpegImageFromFile(hpdf, filename);

        return new HPdfImage(hobj);
    }

    public HPdfImage LoadRawImageFromFile(string filename,
                    uint width, uint height,
                    HPdfColorSpace color_space) {
        IntPtr hobj;

        hobj = HPDF_LoadRawImageFromFile(hpdf, filename, width, height,
                    color_space);

        return new HPdfImage(hobj);
    }

    public HPdfImage LoadRawImageFromMem(byte[] data, int width, int height,
                    HPdfColorSpace color_space, uint bits_per_component) {
        if (width * height < data.Length) {
            string s = "error-code=0x1030 detail-code=0";
            throw new Exception(s);
        }
        IntPtr hobj;

        hobj = HPDF_LoadRawImageFromMem(hpdf, data, width, height, color_space,
            bits_per_component);

        return new HPdfImage(hobj);
    }

    public void SetInfoAttr(HPdfInfoType type, string value) {
        HPDF_SetInfoAttr(hpdf, type, value);
    }

    public void SetInfoDateAttr(HPdfInfoType type, HPdfDate value) {
        HPDF_SetInfoDateAttr(hpdf, type, value);
    }

    public string GetInfoAttr(HPdfInfoType type) {
        return HPDF_GetInfoAttr(hpdf, type);
    }

    public void SetPassword(string owner_passwd, string user_passwd) {
        HPDF_SetPassword(hpdf, owner_passwd, user_passwd);
    }

    public void SetPermission(uint permission) {
        HPDF_SetPermission(hpdf, permission);
    }

    public void SetEncryptionMode(HPdfEncryptMode mode, uint key_len) {
        HPDF_SetEncryptionMode(hpdf, mode, key_len);
    }

    public void SetCompressionMode(uint mode) {
        HPDF_SetCompressionMode(hpdf, mode);
    }

    public HPdfExtGState CreateExtGState() {
        IntPtr hgstate;

        hgstate = HPDF_CreateExtGState(hpdf);

        return new HPdfExtGState(hgstate);
    }
}

public class HPdfPage{
    public const int HPDF_TRUE = 1;
    public const int HPDF_FALSE = 0;

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetWidth(IntPtr page, float value);
